# jerry-presence

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
src/: main.rs  stream.rs
src/players/: mod.rs  mpv.rs
