[package]
name = "jerry_presence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rich-presence = "0.2.3"
clap = { version = "4.4.18", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
regex = "1.5"
structopt = "0.3.24"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
